tests/ui/consts/const_transmute_type_id5.stderr
error[E0080]: invalid `TypeId` value: the hash does not match the type id metadata
  --> $DIR/const_transmute_type_id5.rs:16:13
   |
LL |     assert!(b == b);
   |             ^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `<TypeId as PartialEq>::eq`
  --> $SRC_DIR/core/src/any.rs:LL:COL
note: inside `<TypeId as PartialEq>::eq::compiletime`
  --> $SRC_DIR/core/src/any.rs:LL:COL
   = note: this error originates in the macro `$crate::intrinsics::const_eval_select` which comes from the expansion of the macro `crate::intrinsics::const_eval_select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
